[package]
name = "ivm"
version = "0.2.0" # VERSION
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2018"
license = "MPL-2.0"
description = "The cross-platform Inko version manager"
repository = "https://gitlab.com/inko-lang/ivm"
readme = "README.md"
keywords = ["inko", "cli"]
categories = ["command-line-utilities"]

[dependencies]
getopts = "^0.2"
dirs-next = "^2.0"
ureq = "^2.5"
tar = "^0.4"
flate2 = "^1.0"
dircpy = "^0.3"

[profile.release]
# We don't need to catch panics, and using abort makes our binaries a bit
# smaller.
panic = "abort"
